--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -77,26 +77,18 @@
   {
     color: #ffc107;
   }
-  .signin-btn{
-    border: none;
-    outline: none;
-    height: 30px;
-    width: 30px;
-    /* background: #fb2525; */
-    /* background: white; */
-    /* color: green; */
-    font-size: 20px;
-    font-weight: bold;
-    /* border-radius: 20px; */
-    border-radius: 50%;
-    /* width: 100%; */
-    margin-right: 20px;
-    cursor: pointer;
-  }
-  .signin-btn:hover
-  {
-    /* background: #ffc107; */
-    /* color: black; */
-    opacity: 0.7;
-  }
-  
+.signin-btn img{
+  width: 27px;
+  height: 27px;
+  border-radius: 50%;
+}
+.signin-btn{
+  border-radius: 50%;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+.signin-btn:hover{
+  opacity: 0.7;
+}
