--- a/src/components/DestinationAddress/DestinationAddress.css
+++ b/src/components/DestinationAddress/DestinationAddress.css
@@ -5,7 +5,27 @@
     border: 1px solid gray;
     border-radius: 5px;
     width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .error{
     color:red;
+}
+.address-form{
+    border: 1px solid green;
+    
+}
+.img-address img{
+    width: 50px;
+}
+.timeline{
+    height: 100px;
+    border: 1px solid red;
+    background-color: rgb(31, 3, 31);
+}
+.detail{
+    border: 1px solid green;
+    justify-content: space-around;
+    margin-top: 10px;
+    align-items: center;
 }
