--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -39,3 +39,12 @@
     font-size: large;
     font-weight: bold;
 }
+@media only screen and (max-width: 600px){
+    .card-container{
+        display: block;
+        margin-left: 25%;
+    }
+    .home{
+        height: 1100px;
+    }
+}
