--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,17 +2,22 @@
 .loginbox{
     width: 320px;
     height: 510px;
-    background: #000;
+    background: rgb(40, 40, 48);
     color: #fff;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
+    margin-top: 15%;
+    margin-left: 37%;
+    /* position: absolute; */
+    /* transform: translate(-50%,-50%); */
     box-sizing: border-box;
     padding: 70px 30px;
     text-align: center;
+    /* box-shadow: 10px 10px 10px rgb(49, 48, 48); */
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   }
-  
+  .loginbox-container{
+    background-color: rgb(6, 22, 56);
+    height: 100vh;
+  }
   .avatar{
     width: 100px;
     height: 100px;
@@ -91,4 +96,13 @@
 }
 .signin-btn:hover{
   opacity: 0.7;
+}
+@media only screen and (max-width: 600px){
+  .loginbox{
+    margin: auto;
+    margin-top: 10%;
+  }
+  .loginbox-container{
+    height: 900px;
+  }
 }
