--- a/src/components/DestinationAddress/DestinationAddress.css
+++ b/src/components/DestinationAddress/DestinationAddress.css
@@ -15,6 +15,7 @@
     color: #fff;
     font-size: 16px;
 }
+
 .address-form input[type="submit"]
   {
     border: none;
@@ -39,10 +40,11 @@
   }
 .addressbox{
     width: 320px;
-    height: 410px;
+    height: 510px;
     background: rgb(40, 40, 48);
     color: #fff;
     padding: 5px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 .error{
     color:red;
@@ -56,13 +58,37 @@
 }
 .timeline{
     height: 100px;
-    border: 1px solid red;
-    background-color: rgb(31, 3, 31);
+    border: 1px solid gray;
+    background-color: rgb(5, 23, 82);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 .detail{
     border: 1px solid green;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-top: 15px;
     align-items: center;
-    height: 50px;
+    height: 70px;
+}
+.calendar{
+    color: black;
+    width: 300px;
+    text-align: center;
+    margin: auto;
+}
+.date-p{
+    margin-left: 30px;
+    margin-top: 5px;
+}
+.timeline-text{
+    color: white;
+    margin-left: 20%;
+    margin-top: 15px;
+    /* font-weight: bold; */
+
+}
+@media only screen and (max-width: 600px){
+    .date-p{
+        margin-left: 10px;
+        margin-top: 5px;
+    }
 }
