--- a/src/components/Transport/Transport.css
+++ b/src/components/Transport/Transport.css
@@ -2,12 +2,16 @@
     height: 200px;
     width: 200px;
     margin: 20px;
-    border: 1px solid red;
+    border: 1px solid gray;
     cursor: pointer;
     background-color: white;
     /* margin-top: 50%; */
-
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    transition: transform 0.5s;
     
+}
+.vehicle-container:hover{
+    transform: translateY(-10px);
 }
 .img-container img{
     width: 160px;
@@ -21,7 +25,7 @@
     padding: 5px;
     text-align: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid gray;
     margin-top: 2px;
     font-size: large;
     font-weight: bold;
