--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -17,6 +17,7 @@
   .loginbox-container{
     background-color: rgb(6, 22, 56);
     height: 100vh;
+    /* background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)); */
   }
   .avatar{
     width: 100px;
