--- a/src/components/Transport/Transport.css
+++ b/src/components/Transport/Transport.css
@@ -8,7 +8,7 @@
     /* margin-top: 50%; */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     transition: transform 0.5s;
-    
+    border-radius: 5px;
 }
 .vehicle-container:hover{
     transform: translateY(-10px);
