--- a/src/components/Transport/Transport.css
+++ b/src/components/Transport/Transport.css
@@ -1,7 +1,7 @@
 .vehicle-container{
     height: 200px;
     width: 200px;
-    margin: 20px;
+    margin: 30px;
     border: 1px solid gray;
     cursor: pointer;
     background-color: white;
@@ -30,4 +30,9 @@
     font-size: large;
     font-weight: bold;
     text-decoration: none;
+}
+@media only screen and (max-width: 600px){
+    .vehicle-container{
+        margin-left: 20%;
+    }
 }
