--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -43,3 +43,9 @@
         height: 1100px;
     }
 }
+@media only screen and (max-width: 540px){
+    .card-container{
+        display: block;
+        
+    }
+}
