--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -46,6 +46,6 @@
 @media only screen and (max-width: 540px){
     .card-container{
         display: block;
-        
+        margin-left: 2%;
     }
 }
