--- a/src/components/DestinationAddress/DestinationAddress.css
+++ b/src/components/DestinationAddress/DestinationAddress.css
@@ -108,7 +108,7 @@
         height: 600px;
     }
     .mapbox{
-        margin-top: 10px;
+        margin-top: 20px;
         /* margin-left: 3%; */
         height: 400px;
     }
@@ -120,5 +120,7 @@
     }
 }
 @media only screen and (max-width: 540px){
-
+    .addressbox{
+        margin: auto 15%;
+    }
 }
