--- a/src/components/Transport/Transport.css
+++ b/src/components/Transport/Transport.css
@@ -33,6 +33,7 @@
 }
 @media only screen and (max-width: 600px){
     .vehicle-container{
-        margin-left: 20%;
+        margin-left: 25%;
+        margin-right: 25%;
     }
 }
